feat: form component

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400;600&family=Edu+NSW+ACT+Foundation:wght@400;500&family=Edu+QLD+Beginner&family=Fasthand&family=Inconsolata:wght@200&family=Nunito:ital,wght@0,200;1,300;1,400&family=Pacifico&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
